java-auth/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: java-auth
  labels:
    app: java-auth
    environment: base
