java-auth/k8s/base/auth-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-auth-client
  labels:
    app: java-auth-client
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-auth-client
  template:
    metadata:
      labels:
        app: java-auth-client
        version: v1
    spec:
      containers:
      - name: java-auth-client
        image: gcr.io/speedscale-demos/java-auth-client:v1.0.2
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
      restartPolicy: Always
